--- a/style.css
+++ b/style.css
@@ -55,13 +55,18 @@ body {
 	height: 70px;
 	background: #FFE680;
 }
+.header ul
+{
+   padding-bottom:20px;	
+	
+}
 .header .ul_li li {
 	float:left;
-	padding-left:20px;
+    padding-left:10px;
 	margin-top:30px;
 	margin-left:70px;
 	font-size:18px;
-	
+*/	
 }
 
 a{
@@ -148,6 +153,11 @@ li
 	font-size:16px;
 	color:#99F;
 }
+.content .query_form1
+{
+  margin-left:100px;	
+}
+
 .content .login input.text
 {
 	height:20px;
